--- a/.github/workflows/deploy-tranformations.yml
+++ b/.github/workflows/deploy-tranformations.yml
@@ -7,8 +7,8 @@ name: Deploy transformations
 
 on:
     push:
-        #branches: [main]
-        branches: [none]
+        branches: [main]
+  #branches: [none]
 
 jobs:
     deploy:
@@ -19,25 +19,19 @@ jobs:
                 environment: [test, prod]
                 include:
                     - environment: test
-                      # CDF cluster, like bluefield, greenfield or westeurope-1
-                      CDF_CLUSTER: [CDF cluster]
-                      # CDF Project name
-                      CDF_PROJECT: [CDF project]
-                      # Azure AD tenant id
-                      IDP_TENANT: [AAD tenant id]
+                      CDF_CLUSTER: westeurope-1
+                      CDF_PROJECT: cdf-bootcamp-46-test
+                      IDP_TENANT: 16e3985b-ebe8-4e24-9da4-933e21a9fc81
                     - environment: prod
-                      # CDF cluster, like bluefield, greenfield or westeurope-1
-                      CDF_CLUSTER: [CDF cluster]
-                      # CDF Project name
-                      CDF_PROJECT: [CDF project]
-                      # Azure AD tenant id
-                      IDP_TENANT: [AAD tenant id]
+                      CDF_CLUSTER: westeurope-1
+                      CDF_PROJECT: cdf-bootcamp-46-prod
+                      IDP_TENANT: 16e3985b-ebe8-4e24-9da4-933e21a9fc81
 
         environment: ${{ matrix.environment}}
         env:
             CDF_HOST: https://${{ matrix.CDF_CLUSTER }}.cognitedata.com/
-            # Credentials to be used when running your transformations,
-            # as referenced in your manifests
+      # Credentials to be used when running your transformations,
+      # as referenced in your manifests
             COGNITE_CLIENT_ID: ${{ secrets.CLIENT_ID }}
             COGNITE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
             CDF_PROJECT_NAME: ${{ matrix.CDF_PROJECT }}
